# KitchenServiceBot

./: .gitignore  README.md  Scheduler.py  bot.py  embeds.py  enums.py  logging.json  main.py  pyproject.toml  requirements.txt  ruff.toml  save.py  token_helper.py
cogs/: check.py  help.py  next.py  set_helper.py  setup.py
src/kitchenservicebot/: Scheduler.py  __init__.py  bot.py  bot_config.py  embeds.py  enums.py  hello.py  logger_config.py  main.py  save.py  token_helper.py
src/kitchenservicebot/cogs/: __init__.py  check.py  help.py  next.py  set_helper.py  setup.py  status.py
